--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 src/service/Pointer.java/
+src/service/Fn.java/
+
 ### Eclipse ###
 .apt_generated
 .classpath
